--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -88,6 +88,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git pull --rebase origin main || true
           git add *.svg
           git diff --staged --quiet || git commit -m "Update metrics-main.svg - [Skip GitHub Action]"
           git push
