--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -37,15 +37,26 @@ jobs:
           filename: metrics-languages.svg
           user: artik0din
           base: ""
+          repositories_forks: yes
           plugin_languages: yes
-          plugin_languages_indepth: yes
-          plugin_languages_analysis_timeout: 30
-          plugin_languages_categories: programming, markup
           plugin_languages_colors: github
-          plugin_languages_details: bytes-size, percentage, lines
+          plugin_languages_details: bytes-size, percentage
           plugin_languages_limit: 10
           plugin_languages_sections: most-used
           plugin_languages_ignored: html, css, scss, less
+
+      - name: Generate Achievements
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics-achievements.svg
+          user: artik0din
+          base: ""
+          plugin_achievements: yes
+          plugin_achievements_display: detailed
+          plugin_achievements_threshold: C
+          plugin_achievements_secrets: yes
+          plugin_achievements_ignored: organizer
 
       - name: Generate Isocalendar
         uses: lowlighter/metrics@latest
